# CNNPU

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
include/: CE.hpp  CPU.h  Controller.hpp  DFTUnit.hpp  Memory.hpp  PE.hpp  Types.hpp
include/CLP/: CE.hpp  Controller.hpp  HyperParams.hpp  PE.hpp
include/CNNP/: CE.hpp  CNNPU.hpp  Controller.hpp  HyperParams.hpp  MPE.hpp  Memory.hpp  PE.hpp  Types.hpp
include/CNNPU/: BaseElement.hpp  CE.hpp  CNNPU.hpp  Controller.hpp  HyperParams.hpp  MPE.hpp  Memory.hpp  PE.hpp
src/: CMakeLists.txt  CPU.cpp  TestCLP.cpp  TestDFTUnit.cpp
src/CLP/: CLP.cpp
src/CNNP/: CNNP.cpp
src/CNNPU/: main.cpp
test/: CMakeLists.txt  TestCE.cpp  TestCLP.cpp  TestController.cpp  TestControllerAndCE.cpp  TestMPE.cpp  TestPE.cpp
